# auditmysite

./: .eslintrc.js  .gitignore  .nosecrets.toml  ARCHITECTURE.md  AUDIT_QUALITY_REPORT.md  AXE-COMPARE.md  CASOON_AUDIT_SUMMARY.md  CHANGELOG-1.9.2.md  CHANGELOG.md  CHROME_INSTALLATION.md  CLAUDE.md  CLI-CLEANUP-ANALYSIS.md  Cargo.toml  DEPRECATION-MANAGEMENT.md  DISCREPANCY_ANALYSIS.md  FEATURE_PARITY.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MIGRATION.md  NOTICE  PR_DESCRIPTION.md  README.md  README.md.bak  REDIRECT_HANDLING_IMPROVEMENTS.md  REFACTORING.md  RELEASE_INSTRUCTIONS.md  ROADMAP.md  ROADMAP_0.6.0.md  SCREEN-READER-AUDIT-LLM.md  SESSION_SUMMARY_NOV_2.md  SETUP.md  STATUS.md  TEST_RESULTS.md  TODO-CASOON-AUDIT-ISSUES.md  TODO.md  UPGRADE-v2.0.0.md  WCAG-MANUAL-CHECKS.md  audit-inros-lackner.ts  comprehensive-html-template.js  (+21 more)
.claude/: DEPLOYMENT.md  ROADMAP.md
.claude/templates/: wcag-rule.rs.template
.claude/workflows/: add-rule.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE_release_v2.0.0-alpha.2.md
.github/workflows/: ci.yml  release.yml
.metrics/: PROGRESS.md  PROGRESS_PHASE2.md  baseline-lint.txt  baseline-type-coverage.txt  baseline-typecheck.txt  phase2-progress.txt
Formula/: audit.rb  auditmysite.rb
docs/: ACCESSIBILITY_MANUAL_VERIFICATION.md  ARCHITECTURE.md  AXE_PARITY.md  COMPETITIVE_BENCHMARK.md  COMPREHENSIVE_WEB_AUDIT_CONCEPT.md  CONTRIBUTING.md  ESLINT_WARNING_REDUCTION.md  FEATURE_GEO_AUDIT.md  IMPLEMENTATION_TODO.md  NODE20_MODERNIZATION.md  OUTPUT_CONTRACT.md  PARITY_CONTRACT.jsonc  PARITY_CONTRACT.md  PDF_REPORT_CONTRACT.md  QA_FEATURES.md  TROUBLESHOOTING.md  VALIDATION_GUIDE.md  browser-architecture.md  chrome-dependency.md  json-batch-report.schema.json  json-report.schema.json  search-experience-score.md  studio-contract.schema.json  zertifikat.ai
docs/architecture/: ARCHITECTURE-V2.md
docs/archive/: ANALYSIS.md  QUICKSTART_IMPROVEMENTS.md  README.md  TEST_IMPROVEMENTS.md  WARP.md
docs/maintenance/: DEPRECATED-SYSTEMS.md  STRICT-VALIDATION-SYSTEM.md  TIMEOUT_FIX_SUMMARY.md
docs/notes/: FIXES_SUMMARY.md  THIRD_PARTY_LICENSES.md  TODO.md
docs/process/: CREATE_PULL_REQUEST.md  PULL_REQUEST_SUMMARY.md
docs/release/: CHANGELOG.md  RELEASE-NOTES-2.0.0-alpha.2.md
examples/: stable-interface-example.ts  validated-audit-example.ts
examples/data/: sitemap.xml  test-homepage.xml
locales/de/: report.ftl
locales/en/: report.ftl
reports/: README.md  casoon_audit.json  casoon_report.html
reports-inros/inros-lackner.de/: accessibility-report-2025-09-11.html  detailed-issues-2025-09-11.md
reports/aib-bauplanung.de/: accessibility-report-2025-11-18.html  detailed-issues-2025-11-18.md
reports/www.aib-bauplanung.de/: accessibility-report-2025-11-18.html  detailed-issues-2025-11-18.md
reports/www.casoon.de/: accessibility-report-2025-11-02.html  accessibility-report-2025-11-17.html  audit-2025-11-02.json  detailed-issues-2025-11-02.md  detailed-issues-2025-11-17.md
scripts/: analyze-data-structure.js  axe-compare.js  check-version-match.sh  consolidate-data-structure.js  migrate-to-node-protocol.js  pa11y-compare.js  package-lock.json  package.json  parity-check.sh  pre-commit-check.sh  pre-push-check.sh  release-check.sh  run-nosecrets.sh  validate-build.js
scripts/dev/: debug-cli.js  demo-strict-validation.js  quick_debug.js  test-enhanced-generator.js  test-inros-main.js  test-new-analyzers.js  test-redirect-handling.js  test-v2-api.js
src/: accessibility-checker-main.ts  accessibility-checker-main.ts.deprecated  commands.rs  error.rs  index.ts  lib.rs  main.rs  output_paths.rs  report_writers.rs  sitemap_suggest.rs  types.ts  util.rs
src/a11y_journey/: add_to_cart.rs  disclosure_journey.rs  evaluate.rs  form_error.rs  link_inventory.rs  menu_journey.rs  mod.rs  modal_journey.rs  quantity_stepper.rs  skip_link.rs  spa_navigation.rs  tab_walk.rs  tabs_journey.rs
src/accessibility/: code_gen.rs  diff.rs  element_capture.rs  enrichment.rs  extractor.rs  js_helpers.rs  mod.rs  snapshot.rs  styles.rs  tree.rs
src/adapters/: audit-data-adapter.ts
src/ai_visibility/: chunks.rs  citation.rs  knowledge_graph.rs  mod.rs  module.rs  readability.rs
src/analyzers/: color-contrast-helper.ts  content-weight-analyzer.ts  mobile-friendliness-analyzer.ts  mobile-performance-collector.ts  performance-collector.ts  schema-markup-analyzer.ts  security-headers-analyzer.ts  seo-analyzer.ts  structured-data-analyzer.ts
src/api/: server.ts
src/assessment/: mod.rs
src/audit/: artifacts.rs  baseline.rs  batch.rs  batch_consistency.rs  budget.rs  catalog.rs  comparison.rs  crawl.rs  duplicate.rs  history.rs  interpretation.rs  mod.rs  module.rs  normalized.rs  occurrence_analysis.rs  performance_interpretation.rs  pipeline.rs  prioritization.rs  report.rs  scoring.rs  summary.rs  template_dedup.rs  verdict.rs
src/best_practices/: console_errors.rs  mod.rs  module.rs  vulnerable_libs.rs
src/browser/: consent.rs  detection.rs  installer.rs  manager.rs  mock.rs  mod.rs  pool.rs  registry.rs  resolver.rs  throttle.rs  types.rs
src/cli/: args.rs  (+9 more)
test/: audit-report-accessibility-2025-09-09.csv  audit-report-accessibility-2025-09-09.json  audit-report-accessibility-2025-09-09.md
test-e2e-reports/: audit-report-accessibility-2025-09-09.csv  audit-report-accessibility-2025-09-09.html  audit-report-accessibility-2025-09-09.json  audit-report-accessibility-2025-09-09.md
test-reports/: audit-report-2025-09-10.html  audit-report-accessibility-2025-09-09.csv  audit-report-accessibility-2025-09-09.html  audit-report-accessibility-2025-09-09.json  audit-result-2025-09-10.json
tests/: coverage_matrix.rs  error_handling_tests.rs  integration_mocked.rs  integration_test.rs  module_fixtures.rs  output_format_tests.rs  parity_contract.rs  registry_contract.rs  regression_corpus_contract.rs  release_contract_tests.rs  report-data-validation.test.js  report_consistency_tests.rs  report_lint_tests.rs  setup.ts  snapshot_tests.rs  url_validation_tests.rs  wcag_coverage.rs  wcag_unit_tests.rs
(+422 files in other folders)
